--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.0",
     "frames.js": "^0.17.4",
+    "javascript-time-ago": "^2.5.10",
     "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
